# homepage

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
apps/blog/: admin.py  apps.py  factories.py  fixtures.py  models.py  postconvert.py  urls.py  views.py
apps/blog/migrations/: 0001_initial.py  0002_alter_post_body.py  0003_post_notebook.py
apps/landing/: apps.py  urls.py  views.py
apps/research/: admin.py  factories.py  fixtures_research.py  managers.py  models.py  tests.py  urls.py  views.py
apps/research/migrations/: 0001_initial.py  0002_alter_paper_pdf.py  0003_paper_version.py  0004_alter_paper_version.py  0005_alter_paper_status.py
apps/templates/: base.html  footer.html  header.html  navbar.html
compose/local/: start.sh
config/: asgi.py  basemodels.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py
homepage_files/blog/: admin.py  apps.py  factories.py  feed.py  fixtures.py  models.py  tests.py  urls.py  views.py
homepage_files/contact/: apps.py  forms.py  tests.py  urls.py  views.py
homepage_files/homepage/: credential.py  disqus_info.py  email_info.py  fixtures.py  models.py  settings.py  urls.py
homepage_files/research/: admin.py  apps.py  factories.py  fixtures_research.py  managers.py  models.py  tests.py  urls.py  utils.py  views.py
homepage_files/teaching/: apps.py  urls.py  views.py
homepage_files/templates/: base.html  footer.html  navbar.html
requirements/: requirements.txt  requirements_dev.txt
(+31 files in other folders)
