[project]
name = "homepage"
version = "0.1.0"
description = "Personal homepage Django project"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "Django>=5.2,<5.3",
    "django-bootstrap5>=25.1",
    "django-markdownx>=4.0.9",
    "django-tagulous>=2.1.1",
    "factory-boy>=3.3.3",
    "Faker>=37.4.0",
    "python-dotenv>=1.1.0",
    "nbformat>=5.10.4",
    "nbconvert>=7.16.6",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "Faker>=37.4.0",
    "django-createsuperuserwithpassword>=2.0.0",
    "django-debug-toolbar>=3.7",
    "reportlab>=3.6",
]

[tool.uv]
package = false
